judge17814159.out
ModuleCmd_Load.c(213):ERROR:105: Unable to locate a modulefile for 'python'
  File "judge_sentences.py", line 121
    def sample_sentences(file_name):
      ^
SyntaxError: invalid syntax
